# rp2040-i2c-oddity

./: .gitmodules  Cargo.toml  README.md
main/: Cargo.toml  memory.x
main/src/: main.rs
secondary/: Cargo.toml
secondary/src/: main.rs
