[package]
authors = ["Wilfried Chauveau"]
edition = "2021"
readme = "README.md"
name = "secondary"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12.0"
nb = "1.0.0"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.3.0"
solderparty-rp2040-stamp = "0.1.0"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.1.0"

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version="0.4.0", features=["eh1_0_alpha"] }
# rp2040-boot2 = "0.2.0"
